Add begin html/css/JS

--- a/index.html
+++ b/index.html
@@ -4,10 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./app.js">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Orinoco</title>
 </head>
 <body>
+
+    <header>
+        <nav>
+            <img src="./images/logo.png" alt="Logo Orinoco">
+
+
+            <div class="search">
+                <input type="text" placeholder="ex: caméras, meuble..">
+                <button>Rechercher</button>    
+            </div>
+
+            <div class="menu">
+                    <a href="#">Nous contacter</a>
+                    <a href="#">Mon compte</a>
+                    <a href="#">Mon panier</a>
+            </div>
+
+        </nav>
+    </header>
+
+    <section>
+
+        <h1>Découvrez nos produits :</h1>
+
+        <div class="product">
+            <a href="#">
+                <h2>Ours en peluches faits à la main</h2>
+                <div></div>
+            </a>
+
+        </div>
+
+        <div class="product">
+            <h2>Caméras vintage</h2>
+            <div></div>
+
+        </div>
+
+        <div class="product">
+            <h2>Meubles en chêne</h2>
+            <div></div>
+
+        </div>
+    </section>
+
+    <footer>
+
+    </footer>
     
 
     <script src="./index.js"></script>
