Add NavBar Anim

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <header>
         <nav>
-            <img src="./images/logo.png" alt="Logo Orinoco">
+            <a href="#">
+                <img src="./images/logo.png" alt="Logo Orinoco">
+            </a>
 
 
             <div class="search">
@@ -35,20 +37,26 @@
         <div class="product">
             <a href="#">
                 <h2>Ours en peluches faits à la main</h2>
+                <img src="./images/teddy_1.jpg" alt="Ours en peluche">
                 <div></div>
             </a>
 
         </div>
 
         <div class="product">
-            <h2>Caméras vintage</h2>
-            <div></div>
-
+            <a href="#">    
+                <h2>Caméras vintage</h2>
+                <img src="./images/vcam_1.jpg" alt="Caméras vintage">
+                <div></div>
+            </a>
         </div>
 
         <div class="product">
-            <h2>Meubles en chêne</h2>
-            <div></div>
+            <a href="#">
+                <h2>Meubles en chêne</h2>
+                <img src="./images/oak_1.jpg" alt="Meubles en chêne">
+                <div></div>
+            </a>
 
         </div>
     </section>
