Ajout début de  javascript index et page produit

--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
 
     <header>
         <nav>
-            <a href="index.html">
+            <a href="./index.html">
                 <img src="./images/logo.png" alt="Logo Orinoco">
             </a>
 
@@ -34,6 +34,17 @@
 
         <h1>Découvrez nos produits :</h1>
 
+        <a href="./product.html" class="product">
+
+            <form action="">
+                <select name="Couleur" id="select">
+                    <option value="">Couleur</option>
+                    <option value=""></option>
+                </select>
+                <input type="submit" value="Ajouter au panier !">
+            </form>
+        </a>
+
     </section>
 
     <footer>
@@ -41,6 +52,6 @@
     </footer>
     
 
-    <script src="./index.js"></script>
+    <script src="./product.js"></script>
 </body>
 </html>
